Update compileSdk version to 36 and build tools version(ndk) to 27.0.12077973